# especializacao-ia

./: pyproject.toml  tokenization-01.py  tokenization-02.py  tokenization-03.py  tokenization-04.py
index_dir/: MAIN_czhhj7x3nhr168n7.seg  _MAIN_1.toc
